docs/0.0.3/karoo-sdk/alltypes/index.md
---
title: alltypes - karoo-sdk
---

The top-level module that is provided as the Karoo SDK Android library

### All Types

| [io.hammerhead.sdk.v0.datatype.formatter.BuiltInFormatter](../io.hammerhead.sdk.v0.datatype.formatter/-built-in-formatter/index.html) |  |
| [io.hammerhead.sdk.v0.datatype.transformer.BuiltInTransformer](../io.hammerhead.sdk.v0.datatype.transformer/-built-in-transformer/index.html) |  |
| [io.hammerhead.sdk.v0.datatype.view.BuiltInView](../io.hammerhead.sdk.v0.datatype.view/-built-in-view/index.html) |  |
| [io.hammerhead.sdk.v0.datatype.Dependency](../io.hammerhead.sdk.v0.datatype/-dependency/index.html) | Enumeration of possible dependencies for [SdkDataType](../io.hammerhead.sdk.v0.datatype/-sdk-data-type/index.html). |
| [io.hammerhead.sdk.v0.KeyValueStore](../io.hammerhead.sdk.v0/-key-value-store/index.html) | Simple storage of key/value pairs for use by Karoo SDK modules. This allows modules to store values that need to be persisted across rides and reboots. Additionally, allows access between full APK and Karoo SDK plugins and across plugin instances running within different Karoo apps. |
| [io.hammerhead.sdk.v0.Module](../io.hammerhead.sdk.v0/-module/index.html) | Karoo SDK Module |
| [io.hammerhead.sdk.v0.ModuleFactoryI](../io.hammerhead.sdk.v0/-module-factory-i/index.html) | Interface for factory to build a custom Karoo SDK module. |
| [io.hammerhead.sdk.v0.card.PostRideCard](../io.hammerhead.sdk.v0.card/-post-ride-card/index.html) | Definition of a post-ride card view. |
| [io.hammerhead.sdk.v0.card.RideDetails](../io.hammerhead.sdk.v0.card/-ride-details/index.html) | Details from a recorded ride. |
| [io.hammerhead.sdk.v0.RideLifecycleListener](../io.hammerhead.sdk.v0/-ride-lifecycle-listener/index.html) | Interface which is called for lifecycle events related to ride. |
| [io.hammerhead.sdk.v0.RideState](../io.hammerhead.sdk.v0/-ride-state/index.html) | Enumeration of ride state |
| [io.hammerhead.sdk.v0.SdkContext](../io.hammerhead.sdk.v0/-sdk-context/index.html) | Context wrapper specifically for use within external code (Karoo SDK Module) while running within the Karoo System. This allows use of the originating packages resources within the Karoo System app context. |
| [io.hammerhead.sdk.v0.datatype.SdkDataType](../io.hammerhead.sdk.v0.datatype/-sdk-data-type/index.html) | Definition of an extended data field to add to the Karoo System. |
| [io.hammerhead.sdk.v0.datatype.formatter.SdkFormatter](../io.hammerhead.sdk.v0.datatype.formatter/-sdk-formatter/index.html) | Abstract class to extend the way data field is formatted. |
| [io.hammerhead.sdk.v0.datatype.transformer.SdkTransformer](../io.hammerhead.sdk.v0.datatype.transformer/-sdk-transformer/index.html) | Abstract class to extend the way data field is formatted. |
| [io.hammerhead.sdk.v0.datatype.view.SdkView](../io.hammerhead.sdk.v0.datatype.view/-sdk-view/index.html) | Abstract class to extend the way data fields are displayed in ride. |

